@@ -1,0 +1,266 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u6770\u897f\u7c89\u7d72\u906d\u5718\u968a\u4eba\u54e1\u6bc6\u6253\uff01\u6b4c\u624b\u89aa\u81ea\u9053\u6b49\uff1a\u6211\u611f\u5230\u5f37\u70c8\u7684\u9053\u5fb7\u8cac\u4efb", "description": "\u6770\u897f\u7c89\u7d72\u906d\u5718\u968a\u4eba\u54e1\u6bc6\u6253\uff01\u6b4c\u624b\u89aa\u81ea\u9053\u6b49\uff1a\u6211\u611f\u5230\u5f37\u70c8\u7684\u9053\u5fb7\u8cac\u4efb", "url": "https://www.famechos.me/news/\u6770\u897f\u7c89\u7d72\u906d\u5718\u968a\u4eba\u54e1\u6bc6\u6253\uff01\u6b4c\u624b\u89aa\u81ea\u9053\u6b49\uff1a\u6211\u611f\u5230\u5f37\u70c8\u7684\u9053\u5fb7\u8cac\u4efb.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T14:26:28.568894+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任.html"/>
+<meta name="description" content="杰西歌迷遭遇不幸事件，歌手親自出面道歉並表達強烈的道德責任。了解更多詳情！">
+
+<meta name="keywords" content="杰西、歌迷、毆打、道歉、道德責任、歌手、娛樂新聞">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任.html" />
+        <meta property="og:title" content="杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任" />
+        <meta property="og:description" content="杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任" />
+        <meta property="twitter:description" content="杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>杰西的粉絲在上月遭到該歌手團隊中的一名人員攻擊，原因是粉絲向杰西要求拍照。杰西在社交媒體上向受害者道歉，解釋說她當時無法更好地處理這種情況，因為她“那天才剛剛遇到”施暴者。</p>
+<p>據悉，受害者是一名18歲的杰西粉絲，在9月29日凌晨在首爾南部遭到該歌手陪同人員的攻擊。受害者表示，自己在介紹自己是粉絲並要求拍照後，杰西拒絕了。他為打擾她而道歉並轉身離開，但杰西旁邊的人突然打了他一拳。</p>
+<p>杰西的經紀公司後來澄清施暴者是一名中國男子，杰西不認識他，是那天晚上團隊中的一名製作人的熟人。杰西表示，她現在正在與經紀公司合作，聯繫受害者並努力懲罰施暴者。</p>
+<p>杰西在社交媒體平台X上用韓語寫道：“最近，在一個私人聚會上，一名粉絲向我要求拍照，我拒絕了兩次，因為當時已經很晚了。就在那時，我那天才剛剛遇到的人突然攻擊了粉絲。”</p>
+<p><p>“我對突然發生的情況感到非常慌張，無法好好照顧粉絲，”她補充道。</p>根據您的要求，我處理了文章。以下是處理好的中文HTML結構：</p>
+<p>“不論情況如何，我深深地遺憾我的粉絲遭到了意外的傷害，我感到強烈的道德責任。”</p>
+<p>請注意，由於原文內容有限，處理後的內容也相對較少。如果您需要處理更多內容，請提供完整的文章。</p>
+<h2>韓國再遭朝鮮釋放20個垃圾氣球</h2>
+<p>根據參謀長聯席會議（JCS）的消息，朝鮮今日再次向韓國發放20個垃圾氣球。這是朝鮮近期第二次發放垃圾氣球至韓國。</p>
+<p>此前，韓聯社（Yonhap）報導，朝鮮媒體聲稱首爾曾派遣無人機飛越平壤（Pyongyang）。</p>
+<h2>預計2024年底召開韓美日峰會</h2>
+<p>國家安全顧問表示，韓美日峰會預計將於2024年底舉行。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/KiebIspVJXU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌.html">諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？.html">釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵.html">韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
