@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 14:24:47 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 14:26:36 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -219,5 +219,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>韓國小說家對女兒獲諾貝爾文學獎感到震驚。。韓國小說家韓勝源在接受電台節目採訪時表示，他對女兒韓江獲諾貝爾文學獎感到震驚，好像“整個世界都被顛倒了”。。...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 14:24:47 +0800</pubDate>
+</item><item>
+  <title>杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任</title>
+  <link>https://www.famechos.me/news/杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任.html</link>
+  <description>杰西的粉絲遭到攻擊後，杰西道歉...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 14:26:36 +0800</pubDate>
 </item></channel>
 </rss>
