@@ -218,4 +218,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任.html</ns0:loc>
+    <ns0:lastmod>2024-10-13T14:26:36+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
