@@ -32,3 +32,4 @@ https://en.yna.co.kr/view/AEN20241011003051315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241010010754315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241011008400315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241011007900315?section=culture/k-pop&input=rss
+https://en.yna.co.kr/view/AEN20241011003000315?section=culture/k-pop&input=rss
